--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(getPlantNames)
 export(getPlants)
 export(getPlotNames)
 export(getPlots)
+export(getSoilChemNames)
+export(getSoils)
 export(importERMN)
 export(importMIDN)
 export(importNCRN)
